# lvi_fusion

./: CMakeLists.txt  README.md  Untitled Document 1  note.txt  package.xml
config/: param.yaml
include/: mapping2d.h  matplotlib_cpp.h  slam2d_pose_graph.h  utility.h
launch/: run.launch  test.launch  tm.launch
launch/include/: module_mapping.launch  module_robot_state_publisher.launch  module_rosbag.launch  module_rviz.launch  module_saveData.launch
launch/include/config/: robot.urdf.xacro  slam2d.rviz
msg/: cloud_info.msg
result/data/: 03_12.txt  03_16.txt  03_26.txt  a.txt  b.txt
result/data/NCKH/: gmapping.txt  karto_align.txt  our_align.txt
result/data/compareData/: gmapping.txt  karto.txt  odometry.txt  odometry_.txt  our1.txt
src/: cloudPreprocess.cpp  imuPreintegration.cpp  imu_preProcess.cpp  laser2cloud.cpp  mapping2d.cpp  mappingOpti.cpp
src/handleData/: matplot.py  plot.py  plot_data.py  plot_test.cpp  save_data.py
src/handleData/error_trajectory/: a.py  associate.py  ate.py  process_data.py  rpe.py
src/tm/: pub_data.py
